#71b Fix few PMD warnings
 <documentation